--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,56 @@
+html {
+  width: 100vw;
+  height: 100vh;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  width:100%;
+  height: 100%;
+  overflow: hidden;
+  background: #222;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+}
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 100px;
+  line-height: 0.95;
+  padding: 30px;
+}
+.label {
+  font-size: 20px;
+  font-weight: 600;
+  color:#efa;
+}
+
+.ctx{
+  position: relative;
+  width: 80%;
+  height: 50%;
+}
+
+#myChart{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+#notification {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 200px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.hidden {
+  display: none;
 }
